--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
+    "less": "^4.4.2",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "start-server-and-test": "^2.0.12",
